Setup project react TypeScript

--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,38 @@
-:root {
-  --color-light: #000;
-  --background-light: #fafafc;
-  --color-dark: #faebe0;
-  --background-dark: #1e1e38;
-}
-
-[data-theme='light'] {
-  --text-color: var(--color-light);
-  --background-color: var(--background-light);
-}
-
-[data-theme='dark'] {
-  --text-color: var(--color-dark);
-  --background-color: var(--background-dark);
-}
-
 .App {
-  color: var(--text-color);
-  background-color: var(--background-color);
-  height: 100vh;
   text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
